zu_parser.output
   0  $accept : file $end

   1  file : declarations
   2       |

   3  declarations : declarations declaration
   4               | declaration

   5  declaration : variable ';'
   6              | function

   7  function : type tIDENTIFIER '!' '(' variables ')' '=' literal body
   8           | type tIDENTIFIER '(' variables ')'
   9           | type tIDENTIFIER '!' '(' ')' '=' literal body
  10           | '!' tIDENTIFIER '!' '(' variables ')' '=' literal body
  11           | '!' tIDENTIFIER '(' variables ')'
  12           | '!' tIDENTIFIER '!' '(' ')' '=' literal body

  13  body : block

  14  block : '{' declarations intructions '}'
  15        | '{' declarations '}'
  16        | '{' intructions '}'
  17        | '{' '}'

  18  type : '#'
  19       | '%'
  20       | '$'
  21       | '<' type '>'

  22  expr : literal
  23       | '-' expr
  24       | '~' expr
  25       | '+' expr
  26       | expr '+' expr
  27       | expr '-' expr
  28       | expr '*' expr
  29       | expr '/' expr
  30       | expr '%' expr
  31       | expr '<' expr
  32       | expr '>' expr
  33       | expr tGE expr
  34       | expr tLE expr
  35       | expr tNE expr
  36       | expr tEQ expr
  37       | expr '&' expr
  38       | expr '|' expr
  39       | '(' expr ')'
  40       | '[' expr ']'
  41       | lval
  42       | lval '=' expr
  43       | lval '?'
  44       | '@'
  45       | fun_call

  46  expressions : expressions ',' expr
  47              | expr

  48  fun_call : tIDENTIFIER '(' expressions ')'
  49           | tIDENTIFIER '(' ')'

  50  intructions : intruction
  51              | intructions intruction

  52  intruction : expr ';'
  53             | expr '!'
  54             | expr tPRINTLN
  55             | tBREAK
  56             | tCONTINUE
  57             | tRETURN
  58             | condition
  59             | iteration
  60             | block

  61  variables : variable
  62            | variable ',' variables

  63  variable : type tIDENTIFIER '!' '=' expr
  64           | type tIDENTIFIER '=' expr
  65           | type tIDENTIFIER '!'
  66           | type tIDENTIFIER '?'
  67           | type tIDENTIFIER

  68  iteration : '[' variables ';' expressions ';' expressions ']' intruction
  69            | '[' expressions ';' expressions ';' expressions ']' intruction
  70            | '[' ';' expressions ';' ']' intruction

  71  condition : '[' expr ']' '#' intruction
  72            | '[' expr ']' '?' intruction
  73            | '[' expr ']' '?' intruction ':' intruction

  74  lval : tIDENTIFIER
  75       | lval '[' expr ']'

  76  literal : tINTEGER
  77          | tDOUBLE
  78          | tSTRING

state 0
	$accept : . file $end  (0)
	file : .  (2)

	'<'  shift 1
	'%'  shift 2
	'!'  shift 3
	'#'  shift 4
	'$'  shift 5
	$end  reduce 2

	file  goto 6
	function  goto 7
	declaration  goto 8
	variable  goto 9
	declarations  goto 10
	type  goto 11


state 1
	type : '<' . type '>'  (21)

	'<'  shift 1
	'%'  shift 2
	'#'  shift 4
	'$'  shift 5
	.  error

	type  goto 12


state 2
	type : '%' .  (19)

	.  reduce 19


state 3
	function : '!' . tIDENTIFIER '!' '(' variables ')' '=' literal body  (10)
	function : '!' . tIDENTIFIER '(' variables ')'  (11)
	function : '!' . tIDENTIFIER '!' '(' ')' '=' literal body  (12)

	tIDENTIFIER  shift 13
	.  error


state 4
	type : '#' .  (18)

	.  reduce 18


state 5
	type : '$' .  (20)

	.  reduce 20


state 6
	$accept : file . $end  (0)

	$end  accept


state 7
	declaration : function .  (6)

	.  reduce 6


state 8
	declarations : declaration .  (4)

	.  reduce 4


state 9
	declaration : variable . ';'  (5)

	';'  shift 14
	.  error


state 10
	file : declarations .  (1)
	declarations : declarations . declaration  (3)

	'<'  shift 1
	'%'  shift 2
	'!'  shift 3
	'#'  shift 4
	'$'  shift 5
	$end  reduce 1

	function  goto 7
	declaration  goto 15
	variable  goto 9
	type  goto 11


state 11
	function : type . tIDENTIFIER '!' '(' variables ')' '=' literal body  (7)
	function : type . tIDENTIFIER '(' variables ')'  (8)
	function : type . tIDENTIFIER '!' '(' ')' '=' literal body  (9)
	variable : type . tIDENTIFIER '!' '=' expr  (63)
	variable : type . tIDENTIFIER '=' expr  (64)
	variable : type . tIDENTIFIER '!'  (65)
	variable : type . tIDENTIFIER '?'  (66)
	variable : type . tIDENTIFIER  (67)

	tIDENTIFIER  shift 16
	.  error


state 12
	type : '<' type . '>'  (21)

	'>'  shift 17
	.  error


state 13
	function : '!' tIDENTIFIER . '!' '(' variables ')' '=' literal body  (10)
	function : '!' tIDENTIFIER . '(' variables ')'  (11)
	function : '!' tIDENTIFIER . '!' '(' ')' '=' literal body  (12)

	'!'  shift 18
	'('  shift 19
	.  error


state 14
	declaration : variable ';' .  (5)

	.  reduce 5


state 15
	declarations : declarations declaration .  (3)

	.  reduce 3


state 16
	function : type tIDENTIFIER . '!' '(' variables ')' '=' literal body  (7)
	function : type tIDENTIFIER . '(' variables ')'  (8)
	function : type tIDENTIFIER . '!' '(' ')' '=' literal body  (9)
	variable : type tIDENTIFIER . '!' '=' expr  (63)
	variable : type tIDENTIFIER . '=' expr  (64)
	variable : type tIDENTIFIER . '!'  (65)
	variable : type tIDENTIFIER . '?'  (66)
	variable : type tIDENTIFIER .  (67)

	'='  shift 20
	'!'  shift 21
	'('  shift 22
	'?'  shift 23
	';'  reduce 67


state 17
	type : '<' type '>' .  (21)

	.  reduce 21


state 18
	function : '!' tIDENTIFIER '!' . '(' variables ')' '=' literal body  (10)
	function : '!' tIDENTIFIER '!' . '(' ')' '=' literal body  (12)

	'('  shift 24
	.  error


state 19
	function : '!' tIDENTIFIER '(' . variables ')'  (11)

	'<'  shift 1
	'%'  shift 2
	'#'  shift 4
	'$'  shift 5
	.  error

	variable  goto 25
	variables  goto 26
	type  goto 27


state 20
	variable : type tIDENTIFIER '=' . expr  (64)

	tINTEGER  shift 28
	tIDENTIFIER  shift 29
	tSTRING  shift 30
	tDOUBLE  shift 31
	'+'  shift 32
	'-'  shift 33
	'~'  shift 34
	'('  shift 35
	'['  shift 36
	'@'  shift 37
	.  error

	expr  goto 38
	literal  goto 39
	lval  goto 40
	fun_call  goto 41


state 21
	function : type tIDENTIFIER '!' . '(' variables ')' '=' literal body  (7)
	function : type tIDENTIFIER '!' . '(' ')' '=' literal body  (9)
	variable : type tIDENTIFIER '!' . '=' expr  (63)
	variable : type tIDENTIFIER '!' .  (65)

	'='  shift 42
	'('  shift 43
	';'  reduce 65


state 22
	function : type tIDENTIFIER '(' . variables ')'  (8)

	'<'  shift 1
	'%'  shift 2
	'#'  shift 4
	'$'  shift 5
	.  error

	variable  goto 25
	variables  goto 44
	type  goto 27


state 23
	variable : type tIDENTIFIER '?' .  (66)

	.  reduce 66


state 24
	function : '!' tIDENTIFIER '!' '(' . variables ')' '=' literal body  (10)
	function : '!' tIDENTIFIER '!' '(' . ')' '=' literal body  (12)

	'<'  shift 1
	'%'  shift 2
	')'  shift 45
	'#'  shift 4
	'$'  shift 5
	.  error

	variable  goto 25
	variables  goto 46
	type  goto 27


state 25
	variables : variable .  (61)
	variables : variable . ',' variables  (62)

	','  shift 47
	';'  reduce 61
	')'  reduce 61


state 26
	function : '!' tIDENTIFIER '(' variables . ')'  (11)

	')'  shift 48
	.  error


state 27
	variable : type . tIDENTIFIER '!' '=' expr  (63)
	variable : type . tIDENTIFIER '=' expr  (64)
	variable : type . tIDENTIFIER '!'  (65)
	variable : type . tIDENTIFIER '?'  (66)
	variable : type . tIDENTIFIER  (67)

	tIDENTIFIER  shift 49
	.  error


state 28
	literal : tINTEGER .  (76)

	.  reduce 76


state 29
	fun_call : tIDENTIFIER . '(' expressions ')'  (48)
	fun_call : tIDENTIFIER . '(' ')'  (49)
	lval : tIDENTIFIER .  (74)

	'('  shift 50
	tPRINTLN  reduce 74
	tGE  reduce 74
	tLE  reduce 74
	tEQ  reduce 74
	tNE  reduce 74
	'='  reduce 74
	'&'  reduce 74
	'|'  reduce 74
	'>'  reduce 74
	'<'  reduce 74
	'+'  reduce 74
	'-'  reduce 74
	'*'  reduce 74
	'/'  reduce 74
	'%'  reduce 74
	';'  reduce 74
	'!'  reduce 74
	')'  reduce 74
	'['  reduce 74
	']'  reduce 74
	'?'  reduce 74
	','  reduce 74


state 30
	literal : tSTRING .  (78)

	.  reduce 78


state 31
	literal : tDOUBLE .  (77)

	.  reduce 77


state 32
	expr : '+' . expr  (25)

	tINTEGER  shift 28
	tIDENTIFIER  shift 29
	tSTRING  shift 30
	tDOUBLE  shift 31
	'+'  shift 32
	'-'  shift 33
	'~'  shift 34
	'('  shift 35
	'['  shift 36
	'@'  shift 37
	.  error

	expr  goto 51
	literal  goto 39
	lval  goto 40
	fun_call  goto 41


state 33
	expr : '-' . expr  (23)

	tINTEGER  shift 28
	tIDENTIFIER  shift 29
	tSTRING  shift 30
	tDOUBLE  shift 31
	'+'  shift 32
	'-'  shift 33
	'~'  shift 34
	'('  shift 35
	'['  shift 36
	'@'  shift 37
	.  error

	expr  goto 52
	literal  goto 39
	lval  goto 40
	fun_call  goto 41


state 34
	expr : '~' . expr  (24)

	tINTEGER  shift 28
	tIDENTIFIER  shift 29
	tSTRING  shift 30
	tDOUBLE  shift 31
	'+'  shift 32
	'-'  shift 33
	'~'  shift 34
	'('  shift 35
	'['  shift 36
	'@'  shift 37
	.  error

	expr  goto 53
	literal  goto 39
	lval  goto 40
	fun_call  goto 41


state 35
	expr : '(' . expr ')'  (39)

	tINTEGER  shift 28
	tIDENTIFIER  shift 29
	tSTRING  shift 30
	tDOUBLE  shift 31
	'+'  shift 32
	'-'  shift 33
	'~'  shift 34
	'('  shift 35
	'['  shift 36
	'@'  shift 37
	.  error

	expr  goto 54
	literal  goto 39
	lval  goto 40
	fun_call  goto 41


state 36
	expr : '[' . expr ']'  (40)

	tINTEGER  shift 28
	tIDENTIFIER  shift 29
	tSTRING  shift 30
	tDOUBLE  shift 31
	'+'  shift 32
	'-'  shift 33
	'~'  shift 34
	'('  shift 35
	'['  shift 36
	'@'  shift 37
	.  error

	expr  goto 55
	literal  goto 39
	lval  goto 40
	fun_call  goto 41


state 37
	expr : '@' .  (44)

	.  reduce 44


state 38
	expr : expr . '+' expr  (26)
	expr : expr . '-' expr  (27)
	expr : expr . '*' expr  (28)
	expr : expr . '/' expr  (29)
	expr : expr . '%' expr  (30)
	expr : expr . '<' expr  (31)
	expr : expr . '>' expr  (32)
	expr : expr . tGE expr  (33)
	expr : expr . tLE expr  (34)
	expr : expr . tNE expr  (35)
	expr : expr . tEQ expr  (36)
	expr : expr . '&' expr  (37)
	expr : expr . '|' expr  (38)
	variable : type tIDENTIFIER '=' expr .  (64)

	tGE  shift 56
	tLE  shift 57
	tEQ  shift 58
	tNE  shift 59
	'&'  shift 60
	'|'  shift 61
	'>'  shift 62
	'<'  shift 63
	'+'  shift 64
	'-'  shift 65
	'*'  shift 66
	'/'  shift 67
	'%'  shift 68
	';'  reduce 64
	')'  reduce 64
	','  reduce 64


state 39
	expr : literal .  (22)

	.  reduce 22


state 40
	expr : lval .  (41)
	expr : lval . '=' expr  (42)
	expr : lval . '?'  (43)
	lval : lval . '[' expr ']'  (75)

	'='  shift 69
	'['  shift 70
	'?'  shift 71
	tPRINTLN  reduce 41
	tGE  reduce 41
	tLE  reduce 41
	tEQ  reduce 41
	tNE  reduce 41
	'&'  reduce 41
	'|'  reduce 41
	'>'  reduce 41
	'<'  reduce 41
	'+'  reduce 41
	'-'  reduce 41
	'*'  reduce 41
	'/'  reduce 41
	'%'  reduce 41
	';'  reduce 41
	'!'  reduce 41
	')'  reduce 41
	']'  reduce 41
	','  reduce 41


state 41
	expr : fun_call .  (45)

	.  reduce 45


state 42
	variable : type tIDENTIFIER '!' '=' . expr  (63)

	tINTEGER  shift 28
	tIDENTIFIER  shift 29
	tSTRING  shift 30
	tDOUBLE  shift 31
	'+'  shift 32
	'-'  shift 33
	'~'  shift 34
	'('  shift 35
	'['  shift 36
	'@'  shift 37
	.  error

	expr  goto 72
	literal  goto 39
	lval  goto 40
	fun_call  goto 41


state 43
	function : type tIDENTIFIER '!' '(' . variables ')' '=' literal body  (7)
	function : type tIDENTIFIER '!' '(' . ')' '=' literal body  (9)

	'<'  shift 1
	'%'  shift 2
	')'  shift 73
	'#'  shift 4
	'$'  shift 5
	.  error

	variable  goto 25
	variables  goto 74
	type  goto 27


state 44
	function : type tIDENTIFIER '(' variables . ')'  (8)

	')'  shift 75
	.  error


state 45
	function : '!' tIDENTIFIER '!' '(' ')' . '=' literal body  (12)

	'='  shift 76
	.  error


state 46
	function : '!' tIDENTIFIER '!' '(' variables . ')' '=' literal body  (10)

	')'  shift 77
	.  error


state 47
	variables : variable ',' . variables  (62)

	'<'  shift 1
	'%'  shift 2
	'#'  shift 4
	'$'  shift 5
	.  error

	variable  goto 25
	variables  goto 78
	type  goto 27


state 48
	function : '!' tIDENTIFIER '(' variables ')' .  (11)

	.  reduce 11


state 49
	variable : type tIDENTIFIER . '!' '=' expr  (63)
	variable : type tIDENTIFIER . '=' expr  (64)
	variable : type tIDENTIFIER . '!'  (65)
	variable : type tIDENTIFIER . '?'  (66)
	variable : type tIDENTIFIER .  (67)

	'='  shift 20
	'!'  shift 79
	'?'  shift 23
	';'  reduce 67
	')'  reduce 67
	','  reduce 67


state 50
	fun_call : tIDENTIFIER '(' . expressions ')'  (48)
	fun_call : tIDENTIFIER '(' . ')'  (49)

	tINTEGER  shift 28
	tIDENTIFIER  shift 29
	tSTRING  shift 30
	tDOUBLE  shift 31
	'+'  shift 32
	'-'  shift 33
	'~'  shift 34
	'('  shift 35
	')'  shift 80
	'['  shift 36
	'@'  shift 37
	.  error

	expressions  goto 81
	expr  goto 82
	literal  goto 39
	lval  goto 40
	fun_call  goto 41


state 51
	expr : '+' expr .  (25)
	expr : expr . '+' expr  (26)
	expr : expr . '-' expr  (27)
	expr : expr . '*' expr  (28)
	expr : expr . '/' expr  (29)
	expr : expr . '%' expr  (30)
	expr : expr . '<' expr  (31)
	expr : expr . '>' expr  (32)
	expr : expr . tGE expr  (33)
	expr : expr . tLE expr  (34)
	expr : expr . tNE expr  (35)
	expr : expr . tEQ expr  (36)
	expr : expr . '&' expr  (37)
	expr : expr . '|' expr  (38)

	.  reduce 25


state 52
	expr : '-' expr .  (23)
	expr : expr . '+' expr  (26)
	expr : expr . '-' expr  (27)
	expr : expr . '*' expr  (28)
	expr : expr . '/' expr  (29)
	expr : expr . '%' expr  (30)
	expr : expr . '<' expr  (31)
	expr : expr . '>' expr  (32)
	expr : expr . tGE expr  (33)
	expr : expr . tLE expr  (34)
	expr : expr . tNE expr  (35)
	expr : expr . tEQ expr  (36)
	expr : expr . '&' expr  (37)
	expr : expr . '|' expr  (38)

	.  reduce 23


state 53
	expr : '~' expr .  (24)
	expr : expr . '+' expr  (26)
	expr : expr . '-' expr  (27)
	expr : expr . '*' expr  (28)
	expr : expr . '/' expr  (29)
	expr : expr . '%' expr  (30)
	expr : expr . '<' expr  (31)
	expr : expr . '>' expr  (32)
	expr : expr . tGE expr  (33)
	expr : expr . tLE expr  (34)
	expr : expr . tNE expr  (35)
	expr : expr . tEQ expr  (36)
	expr : expr . '&' expr  (37)
	expr : expr . '|' expr  (38)

	.  reduce 24


state 54
	expr : expr . '+' expr  (26)
	expr : expr . '-' expr  (27)
	expr : expr . '*' expr  (28)
	expr : expr . '/' expr  (29)
	expr : expr . '%' expr  (30)
	expr : expr . '<' expr  (31)
	expr : expr . '>' expr  (32)
	expr : expr . tGE expr  (33)
	expr : expr . tLE expr  (34)
	expr : expr . tNE expr  (35)
	expr : expr . tEQ expr  (36)
	expr : expr . '&' expr  (37)
	expr : expr . '|' expr  (38)
	expr : '(' expr . ')'  (39)

	tGE  shift 56
	tLE  shift 57
	tEQ  shift 58
	tNE  shift 59
	'&'  shift 60
	'|'  shift 61
	'>'  shift 62
	'<'  shift 63
	'+'  shift 64
	'-'  shift 65
	'*'  shift 66
	'/'  shift 67
	'%'  shift 68
	')'  shift 83
	.  error


state 55
	expr : expr . '+' expr  (26)
	expr : expr . '-' expr  (27)
	expr : expr . '*' expr  (28)
	expr : expr . '/' expr  (29)
	expr : expr . '%' expr  (30)
	expr : expr . '<' expr  (31)
	expr : expr . '>' expr  (32)
	expr : expr . tGE expr  (33)
	expr : expr . tLE expr  (34)
	expr : expr . tNE expr  (35)
	expr : expr . tEQ expr  (36)
	expr : expr . '&' expr  (37)
	expr : expr . '|' expr  (38)
	expr : '[' expr . ']'  (40)

	tGE  shift 56
	tLE  shift 57
	tEQ  shift 58
	tNE  shift 59
	'&'  shift 60
	'|'  shift 61
	'>'  shift 62
	'<'  shift 63
	'+'  shift 64
	'-'  shift 65
	'*'  shift 66
	'/'  shift 67
	'%'  shift 68
	']'  shift 84
	.  error


state 56
	expr : expr tGE . expr  (33)

	tINTEGER  shift 28
	tIDENTIFIER  shift 29
	tSTRING  shift 30
	tDOUBLE  shift 31
	'+'  shift 32
	'-'  shift 33
	'~'  shift 34
	'('  shift 35
	'['  shift 36
	'@'  shift 37
	.  error

	expr  goto 85
	literal  goto 39
	lval  goto 40
	fun_call  goto 41


state 57
	expr : expr tLE . expr  (34)

	tINTEGER  shift 28
	tIDENTIFIER  shift 29
	tSTRING  shift 30
	tDOUBLE  shift 31
	'+'  shift 32
	'-'  shift 33
	'~'  shift 34
	'('  shift 35
	'['  shift 36
	'@'  shift 37
	.  error

	expr  goto 86
	literal  goto 39
	lval  goto 40
	fun_call  goto 41


state 58
	expr : expr tEQ . expr  (36)

	tINTEGER  shift 28
	tIDENTIFIER  shift 29
	tSTRING  shift 30
	tDOUBLE  shift 31
	'+'  shift 32
	'-'  shift 33
	'~'  shift 34
	'('  shift 35
	'['  shift 36
	'@'  shift 37
	.  error

	expr  goto 87
	literal  goto 39
	lval  goto 40
	fun_call  goto 41


state 59
	expr : expr tNE . expr  (35)

	tINTEGER  shift 28
	tIDENTIFIER  shift 29
	tSTRING  shift 30
	tDOUBLE  shift 31
	'+'  shift 32
	'-'  shift 33
	'~'  shift 34
	'('  shift 35
	'['  shift 36
	'@'  shift 37
	.  error

	expr  goto 88
	literal  goto 39
	lval  goto 40
	fun_call  goto 41


state 60
	expr : expr '&' . expr  (37)

	tINTEGER  shift 28
	tIDENTIFIER  shift 29
	tSTRING  shift 30
	tDOUBLE  shift 31
	'+'  shift 32
	'-'  shift 33
	'~'  shift 34
	'('  shift 35
	'['  shift 36
	'@'  shift 37
	.  error

	expr  goto 89
	literal  goto 39
	lval  goto 40
	fun_call  goto 41


state 61
	expr : expr '|' . expr  (38)

	tINTEGER  shift 28
	tIDENTIFIER  shift 29
	tSTRING  shift 30
	tDOUBLE  shift 31
	'+'  shift 32
	'-'  shift 33
	'~'  shift 34
	'('  shift 35
	'['  shift 36
	'@'  shift 37
	.  error

	expr  goto 90
	literal  goto 39
	lval  goto 40
	fun_call  goto 41


state 62
	expr : expr '>' . expr  (32)

	tINTEGER  shift 28
	tIDENTIFIER  shift 29
	tSTRING  shift 30
	tDOUBLE  shift 31
	'+'  shift 32
	'-'  shift 33
	'~'  shift 34
	'('  shift 35
	'['  shift 36
	'@'  shift 37
	.  error

	expr  goto 91
	literal  goto 39
	lval  goto 40
	fun_call  goto 41


state 63
	expr : expr '<' . expr  (31)

	tINTEGER  shift 28
	tIDENTIFIER  shift 29
	tSTRING  shift 30
	tDOUBLE  shift 31
	'+'  shift 32
	'-'  shift 33
	'~'  shift 34
	'('  shift 35
	'['  shift 36
	'@'  shift 37
	.  error

	expr  goto 92
	literal  goto 39
	lval  goto 40
	fun_call  goto 41


state 64
	expr : expr '+' . expr  (26)

	tINTEGER  shift 28
	tIDENTIFIER  shift 29
	tSTRING  shift 30
	tDOUBLE  shift 31
	'+'  shift 32
	'-'  shift 33
	'~'  shift 34
	'('  shift 35
	'['  shift 36
	'@'  shift 37
	.  error

	expr  goto 93
	literal  goto 39
	lval  goto 40
	fun_call  goto 41


state 65
	expr : expr '-' . expr  (27)

	tINTEGER  shift 28
	tIDENTIFIER  shift 29
	tSTRING  shift 30
	tDOUBLE  shift 31
	'+'  shift 32
	'-'  shift 33
	'~'  shift 34
	'('  shift 35
	'['  shift 36
	'@'  shift 37
	.  error

	expr  goto 94
	literal  goto 39
	lval  goto 40
	fun_call  goto 41


state 66
	expr : expr '*' . expr  (28)

	tINTEGER  shift 28
	tIDENTIFIER  shift 29
	tSTRING  shift 30
	tDOUBLE  shift 31
	'+'  shift 32
	'-'  shift 33
	'~'  shift 34
	'('  shift 35
	'['  shift 36
	'@'  shift 37
	.  error

	expr  goto 95
	literal  goto 39
	lval  goto 40
	fun_call  goto 41


state 67
	expr : expr '/' . expr  (29)

	tINTEGER  shift 28
	tIDENTIFIER  shift 29
	tSTRING  shift 30
	tDOUBLE  shift 31
	'+'  shift 32
	'-'  shift 33
	'~'  shift 34
	'('  shift 35
	'['  shift 36
	'@'  shift 37
	.  error

	expr  goto 96
	literal  goto 39
	lval  goto 40
	fun_call  goto 41


state 68
	expr : expr '%' . expr  (30)

	tINTEGER  shift 28
	tIDENTIFIER  shift 29
	tSTRING  shift 30
	tDOUBLE  shift 31
	'+'  shift 32
	'-'  shift 33
	'~'  shift 34
	'('  shift 35
	'['  shift 36
	'@'  shift 37
	.  error

	expr  goto 97
	literal  goto 39
	lval  goto 40
	fun_call  goto 41


state 69
	expr : lval '=' . expr  (42)

	tINTEGER  shift 28
	tIDENTIFIER  shift 29
	tSTRING  shift 30
	tDOUBLE  shift 31
	'+'  shift 32
	'-'  shift 33
	'~'  shift 34
	'('  shift 35
	'['  shift 36
	'@'  shift 37
	.  error

	expr  goto 98
	literal  goto 39
	lval  goto 40
	fun_call  goto 41

